--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,21 @@
 cmake_minimum_required(VERSION 2.8.9)
-project(monodec)
+project(decrypt)
 
 enable_testing()
 
 include_directories(include)
-include_directories(/usr/include/libnl3)
 
-file(GLOB_RECURSE SOURCES "src/*".cc)
+file(GLOB_RECURSE src "src/*".cc)
 
 set (CMAKE_CXX_STANDARD 17)
 # SET(GCC_COVERAGE_LINK_FLAGS    "-lnl-3 -lnl-route-3 -llxc -lpthread")
 # SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS}
 # ${GCC_COVERAGE_LINK_FLAGS}")
 
-add_executable(monodec ${SOURCES})
+add_executable(decrypt ${src})
+install(TARGETS decrypt RUNTIME DESTINATION bin)
 find_package(Catch2 REQUIRED)
-file(GLOB testfiles "test/*".cc "src/*".cc)
+file(GLOB testfiles "test/*".cc "src/encryptor/*".cc "src/decryptor/*".cc)
 add_executable(tests ${testfiles})
 target_link_libraries(tests PRIVATE Catch2::Catch2)
 
@@ -23,9 +23,4 @@ include(CTest)
 include(Catch)
 catch_discover_tests(tests)
 
-install(
-	TARGETS tests
-	RUNTIME DESTINATION bin
-)
-
-install(TARGETS monodec DESTINATION /usr/bin)
+install(TARGETS tests DESTINATION bin)
