--- a/.github/workflows/automated_test.yaml
+++ b/.github/workflows/automated_test.yaml
@@ -15,7 +15,13 @@ jobs:
           cd ${{ github.workspace }}
           mkdir build
           cd build
-          ls ..
+          echo "::set-output name=mix-test::$(ls ..)"
           cmake ..
           ./tests
-
+        id: run_tests
+      - name: Slack Notification
+        uses: rtCamp/action-slack-notify@master
+        env:
+          SLACK_MESSAGE: ${{join(steps.run_tests.outputs.*, '\n')}}
+          SLACK_TITLE: CI Test Suite
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
