--- a/.github/workflows/automated_test.yaml
+++ b/.github/workflows/automated_test.yaml
@@ -16,6 +16,7 @@ jobs:
           mkdir build
           cd build
           echo "::set-output name=mix-test::$(ls ..)"
+          echo "::set-output name=mix-test::$(ls)"
         id: run_tests
       - name: Slack Notification
         uses: rtCamp/action-slack-notify@master
