--- a/.github/workflows/automated_test.yaml
+++ b/.github/workflows/automated_test.yaml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Configure cmake
         run: |
-          cd ${{ github.workspace }}
+          cd ${{ github.workspace }}/..
           mkdir build
           cd build
           echo "::set-output name=mix-test::$(ls ..)"
