--- a/.github/workflows/automated_test.yaml
+++ b/.github/workflows/automated_test.yaml
@@ -17,6 +17,8 @@ jobs:
           cd build
           echo "::set-output name=mix-test::$(ls ..)"
           echo "::set-output name=mix-test::$(ls)"
+          cmake ..
+          ./tests
         id: run_tests
       - name: Slack Notification
         uses: rtCamp/action-slack-notify@master
