--- a/.github/workflows/automated_test.yaml
+++ b/.github/workflows/automated_test.yaml
@@ -12,11 +12,13 @@ jobs:
     steps:
       - name: Configure cmake
         run: |
-          cd ${{ github.workspace }}
+          cd ${{ github.workspace }}/..
           mkdir build
           cd build
           echo "::set-output name=mix-test::$(ls ..)"
           echo "::set-output name=mix-test::$(ls)"
+          cmake ..
+          ./tests
         id: run_tests
       - name: Slack Notification
         uses: rtCamp/action-slack-notify@master
