--- a/.github/workflows/automated_test.yaml
+++ b/.github/workflows/automated_test.yaml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: dependency
+        run: sudo apt-get update && sudo apt-get install g++
       - name: Configure cmake
         run: |
           cd ${{ github.workspace }}
