--- a/.github/workflows/automated_test.yaml
+++ b/.github/workflows/automated_test.yaml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: dependency
-        run: sudo apt-get update && sudo apt-get install g++
+        run: sudo apt-get update && sudo apt-get install g++ catch2
       - name: Configure cmake
         run: |
           cd ${{ github.workspace }}
