--- a/.github/workflows/automated_test.yaml
+++ b/.github/workflows/automated_test.yaml
@@ -12,7 +12,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: dependency
-        run: sudo apt-get update && sudo apt-get install g++ catch2
+        run: |
+          sudo apt-get update && sudo apt-get install g++
+          git clone https://github.com/catchorg/Catch2.git
+          cd Catch2
+          cmake -Bbuild -H. -DBUILD_TESTING=OFF
+          sudo cmake --build build/ --target install 
       - name: Configure cmake
         run: |
           cd ${{ github.workspace }}
