--- a/.github/workflows/automated_test.yaml
+++ b/.github/workflows/automated_test.yaml
@@ -24,6 +24,7 @@ jobs:
           mkdir build
           cd build
           cmake ..
+          make
           ./tests
         id: run_tests
       - name: Slack Notification
