added some other path

--- a/.github/workflows/automated_test.yaml
+++ b/.github/workflows/automated_test.yaml
@@ -23,7 +23,7 @@ jobs:
           cd ${{ github.workspace }}
           mkdir build
           cd build
-          cmake ..
+          cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr ..
           make
           ./tests
         id: run_tests
