--- a/.github/workflows/automated_test.yaml
+++ b/.github/workflows/automated_test.yaml
@@ -16,7 +16,7 @@ jobs:
           sudo apt-get update && sudo apt-get install g++
           git clone https://github.com/catchorg/Catch2.git
           cd Catch2
-          cmake -Bbuild -H. -DBUILD_TESTING=OFF
+          cmake -Bbuild -H. -DBUILD_TESTING=OFF -DCMAKE_INSTALL_PREFIX:PATH=/usr
           sudo cmake --build build/ --target install 
       - name: Configure cmake
         run: |
